--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro | LATAM Airlines</title>
+    <title>Registro | TALAM Airlines</title>
   </head>
   <body>
     <div id="root"></div>
